# talk

./: Makefile.am  README  autogen.sh  configure.ac  test-layout.py
data/: Makefile.am  talk.glade
talk/: Makefile.am  __init__.py  defs.py  talk-clutter.py
talk/core/: BulletSlide.py  SlideCollection.py  TalkLayout.py  TalkSlide.py  TextSlide.py  TitleSlide.py
talk/fosdem2008/: FosdemTalk.py
talk/ui/: MainWindow.py
